// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TabStopsInstanceSectionPropsFactory for Fastpass creates props as expected 1`] = `
{
  "deps": {
    "tabStopRequirementActionMessageCreator": [typemoq mock object],
    "tabStopsTestViewController": [typemoq mock object],
  },
  "getCollapsibleComponentPropsWithInstance": [Function],
  "headingLevel": 3,
  "results": [
    {
      "description": "test requirement description 1",
      "id": "keyboard-navigation",
      "instances": [
        {
          "description": "test desc 1",
          "id": "test-id-1",
        },
        {
          "description": "test desc 2",
          "id": "test-id-2",
        },
      ],
      "isExpanded": false,
      "name": "test requirement name 1",
    },
    {
      "description": "test requirement description 2",
      "id": "keyboard-traps",
      "instances": [
        {
          "description": "test desc 3",
          "id": "test-id-3",
        },
      ],
      "isExpanded": false,
      "name": "test requirement name 2",
    },
  ],
  "tabStopRequirementState": {
    "keyboard-navigation": {
      "instances": [
        {
          "description": "test desc 1",
          "id": "test-id-1",
        },
      ],
      "isExpanded": false,
      "status": "fail",
    },
    "keyboard-traps": {
      "instances": [
        {
          "description": "test desc 2",
          "id": "test-id-2",
        },
      ],
      "isExpanded": false,
      "status": "fail",
    },
  },
}
`;

exports[`TabStopsInstanceSectionPropsFactory for Fastpass creates props as expected 2`] = `
{
  "buttonAriaLabel": "label",
  "containerAutomationId": "tab-stops-results-group",
  "containerClassName": "collapsibleRequirementDetailsGroup",
  "content": <TabStopsRequirementInstancesCollapsibleContent
    instances={
      [
        {
          "description": "test desc 1",
          "id": "test-id-1",
        },
        {
          "description": "test desc 2",
          "id": "test-id-2",
        },
      ]
    }
    onEditButtonClicked={[Function]}
    onRemoveButtonClicked={[Function]}
    requirementId="keyboard-navigation"
  />,
  "deps": {
    "tabStopRequirementActionMessageCreator": [typemoq mock object],
    "tabStopsTestViewController": [typemoq mock object],
  },
  "header": <TabStopsMinimalRequirementHeader
    deps={
      {
        "tabStopRequirementActionMessageCreator": [typemoq mock object],
        "tabStopsTestViewController": [typemoq mock object],
      }
    }
    requirement={
      {
        "description": "test requirement description 1",
        "id": "keyboard-navigation",
        "instances": [
          {
            "description": "test desc 1",
            "id": "test-id-1",
          },
          {
            "description": "test desc 2",
            "id": "test-id-2",
          },
        ],
        "isExpanded": false,
        "name": "test requirement name 1",
      }
    }
  />,
  "headingLevel": 3,
  "id": "keyboard-navigation",
  "isExpanded": false,
  "key": "summary-details-1",
  "onExpandToggle": [Function],
}
`;

exports[`TabStopsInstanceSectionPropsFactory for Report creates props as expected 1`] = `
{
  "deps": {
    "tabStopRequirementActionMessageCreator": [typemoq mock object],
    "tabStopsTestViewController": [typemoq mock object],
  },
  "getCollapsibleComponentPropsWithInstance": [Function],
  "getCollapsibleComponentPropsWithoutInstance": [Function],
  "headingLevel": 3,
  "results": [
    {
      "description": "test requirement description 1",
      "id": "keyboard-navigation",
      "instances": [
        {
          "description": "test desc 1",
          "id": "test-id-1",
        },
        {
          "description": "test desc 2",
          "id": "test-id-2",
        },
      ],
      "isExpanded": false,
      "name": "test requirement name 1",
    },
    {
      "description": "test requirement description 2",
      "id": "keyboard-traps",
      "instances": [
        {
          "description": "test desc 3",
          "id": "test-id-3",
        },
      ],
      "isExpanded": false,
      "name": "test requirement name 2",
    },
  ],
  "tabStopRequirementState": {
    "keyboard-navigation": {
      "instances": [
        {
          "description": "test desc 1",
          "id": "test-id-1",
        },
      ],
      "isExpanded": false,
      "status": "fail",
    },
    "keyboard-traps": {
      "instances": [
        {
          "description": "test desc 2",
          "id": "test-id-2",
        },
      ],
      "isExpanded": false,
      "status": "fail",
    },
  },
}
`;

exports[`TabStopsInstanceSectionPropsFactory for Report creates props as expected 2`] = `
{
  "buttonAriaLabel": "label",
  "containerAutomationId": "tab-stops-results-group",
  "containerClassName": "collapsibleRequirementDetailsGroup",
  "content": <TabStopsReportInstanceList
    instances={
      [
        {
          "props": [
            {
              "key": "Comment",
              "value": "test desc 1",
            },
            {
              "key": "Comment",
              "value": "test desc 2",
            },
          ],
        },
      ]
    }
  />,
  "deps": {
    "tabStopRequirementActionMessageCreator": [typemoq mock object],
    "tabStopsTestViewController": [typemoq mock object],
  },
  "header": <TabStopsMinimalRequirementHeader
    deps={
      {
        "tabStopRequirementActionMessageCreator": [typemoq mock object],
        "tabStopsTestViewController": [typemoq mock object],
      }
    }
    requirement={
      {
        "description": "test requirement description 1",
        "id": "keyboard-navigation",
        "instances": [
          {
            "description": "test desc 1",
            "id": "test-id-1",
          },
          {
            "description": "test desc 2",
            "id": "test-id-2",
          },
        ],
        "isExpanded": false,
        "name": "test requirement name 1",
      }
    }
  />,
  "headingLevel": 3,
  "id": "keyboard-navigation",
  "isExpanded": false,
  "key": "summary-details-1",
  "onExpandToggle": [Function],
}
`;

exports[`TabStopsInstanceSectionPropsFactory for Report creates props as expected 3`] = `
{
  "buttonAriaLabel": "label",
  "containerAutomationId": "tab-stops-results-group",
  "containerClassName": "collapsibleRequirementDetailsGroup",
  "content": <span
    className="noInstances"
  >
    This requirement has failed but no comment has been added
  </span>,
  "deps": {
    "tabStopRequirementActionMessageCreator": [typemoq mock object],
    "tabStopsTestViewController": [typemoq mock object],
  },
  "header": <TabStopsMinimalRequirementHeader
    deps={
      {
        "tabStopRequirementActionMessageCreator": [typemoq mock object],
        "tabStopsTestViewController": [typemoq mock object],
      }
    }
    requirement={
      {
        "description": "test requirement description 1",
        "id": "keyboard-navigation",
        "instances": [
          {
            "description": "test desc 1",
            "id": "test-id-1",
          },
          {
            "description": "test desc 2",
            "id": "test-id-2",
          },
        ],
        "isExpanded": false,
        "name": "test requirement name 1",
      }
    }
  />,
  "headingLevel": 3,
  "id": "keyboard-navigation",
  "isExpanded": false,
  "key": "summary-details-1",
  "onExpandToggle": [Function],
}
`;
